2015-06-28  Xabier Rodriguez Calvar  <calvaris@igalia.com> and Youenn Fablet  <youenn.fablet@crf.canon.fr>

        [Streams API] Add support for chunks with customized sizes
        https://bugs.webkit.org/show_bug.cgi?id=146312

        Reviewed by Darin Adler.

        * streams/reference-implementation/bad-strategies-expected.txt:

2015-06-27  David Kilzer  <ddkilzer@apple.com>

        fast/canvas/webgl/tex-*.html flakily timeout on Mavericks Debug WK1

        * platform/mac-wk1/TestExpectations: Change "Slow" to
        "Pass Timeout" since the tests flakily time out and fail:
        - fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba4444.html
        - fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba5551.html
        - fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html
        - fast/canvas/webgl/tex-image-and-uniform-binding-bugs.html

2015-06-27  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r186038): accessibility/aria-roledescription.html fails on Windows

        * platform/win/TestExpectations: Mark as failing on Windows:
        - accessibility/aria-roledescription.html

2015-06-27  Chris Fleizach  <cfleizach@apple.com>

        AX: implement @aria-roledescription
        https://bugs.webkit.org/show_bug.cgi?id=146274

        Reviewed by Darin Adler.

        * accessibility/aria-roledescription-expected.txt: Added.
        * accessibility/aria-roledescription.html: Added.

2015-06-27  Myles C. Maxfield  <mmaxfield@apple.com>

        REGRESSION (r186001): fast/text/han-generic-font-families.html always fails on Yosemite
        https://bugs.webkit.org/show_bug.cgi?id=146385

        Unreviewed.

        * platform/mac-yosemite/fast/text/han-generic-font-families-expected.html:
        * platform/mac/TestExpectations:

2015-06-27  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r186029): fast/text/justify-ideograph-{complex,simple,vertical}.html fail on Yosemite
