@@ -1,3 +1,13 @@
+2015-06-28  Skachkov Oleksandr  <gskachkov@gmail.com>
+
+        [ES6] Implement ES6 arrow function syntax. No Line terminator between function parameters and =>
+        https://bugs.webkit.org/show_bug.cgi?id=146394
+
+        Reviewed by Yusuke Suzuki.
+
+        * js/arrowfunction-syntax-errors-expected.txt:
+        * js/script-tests/arrowfunction-syntax-errors.js:
+
 2015-06-28  Xabier Rodriguez Calvar  <calvaris@igalia.com> and Youenn Fablet  <youenn.fablet@crf.canon.fr>
 
         [Streams API] Add support for chunks with customized sizes
